syntax = "proto3";
package protos.game.chat;

// 游꿢 Mensaje que el cliente env칤a al servidor
message ClientMessageChat {
  oneof message {
    ChatSend chat_send = 1; 
    ChatCommand chat_command = 2;  // 游늷 Nuevo mensaje para comandos
  }
}

// 游꿢 Mensaje que el servidor env칤a a los clientes
message ServerMessageChat {
  oneof message {
    OutgoingChatMessage outgoing_chat_message = 1;
    SystemMessage system_message = 2;  // 游늷 Nuevo mensaje del sistema
  }
}

// 游닉 Mensaje normal del chat con diferentes canales
message ChatSend {
    int32 playerId = 1;
    string message = 2;
    int64 timestamp_ms = 3;
    ChatChannel channel = 4;  // 游늷 Nuevo: canal del mensaje
}

// 游닉 Mensaje que los jugadores reciben en el chat
message OutgoingChatMessage {
    int32 playerId = 1;
    string playerName = 2;
    string message = 3;
    int64 timestamp_ms = 4;
    ChatChannel channel = 5;  // 游늷 Nuevo: canal del mensaje
}

// 游닆 Mensaje de comandos (/mute, /w, /roll)
message ChatCommand {
    int32 playerId = 1;
    string command = 2;
    repeated string args = 3;  // Argumentos opcionales del comando
}

// 游닉 Mensajes del sistema (avisos, muteos, eventos)
message SystemMessage {
    string message = 1;
    SystemMessageType type = 2;
}

// 游꿢 Enumeraci칩n de los tipos de chat disponibles
enum ChatChannel {
    GENERAL = 0;
    PRIVATE = 1;
    PARTY = 2;
    GUILD = 3;
    SYSTEM = 4;
}

// 游꿢 Enumeraci칩n de los tipos de mensajes del sistema
enum SystemMessageType {
    INFO = 0;
    WARNING = 1;
    ERROR = 2;
    MUTE_NOTIFICATION = 3;
}
